# XYZ-2-MDR-Logical-State-Preparation

./: .gitignore  README.md  analysis_plots.ipynb  mdr_table_d11.csv  mdr_table_d3.csv  mdr_table_d5.csv  mdr_table_d9.csv  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
XYZ2-experiment-data-slurm/: working-folder-xyz2_mdr.txt
XYZ2-experiment-data-slurm/Run-20260308-174616Z-d11-pure_z-with-spam/: results_pure_z_d11.csv  run_config.json
XYZ2-experiment-data-slurm/Run-20260308-174616Z-d11-unbiased-with-spam/: run_config.json
XYZ2-experiment-data-slurm/Run-20260308-174616Z-d11-z_type-with-spam/: run_config.json
XYZ2-experiment-data-slurm/Run-20260308-174616Z-d3-pure_z-with-spam/: results_pure_z_d3.csv  run_config.json
data/analysis/: d3_final_round_fidelity_replicates.csv  (+1 more)
legacy/: XYZ_2_Code_9_excerpt.txt  mdr_table_d7.csv
scripts/: merge_slurm_results.py  plot_thresholds_from_csv.py  run_distance_sweeps.py  run_slurm_experiment.py  run_sweeps_no_spam.py  run_sweeps_with_spam.py  setup_slurm_run.py
simulation_results/: results_pure_z_d5.csv  results_pure_z_d7.csv  results_pure_z_d9.csv  results_unbiased_d3.csv  results_unbiased_d5.csv  results_z_type_d3.csv  results_z_type_d5.csv  results_z_type_d9.csv
slurm/: run_xyz2_parallel.sh  run_xyz2_parallel_no_spam.sh  run_xyz2_parallel_with_spam.sh
tests/: conftest.py  test_analysis_reporting.py  test_mdr_circuit.py  test_mdr_noise_sweep.py  test_mdr_table.py  test_plotters.py  test_robust_toggle_generator.py  test_workflows.py  test_xyz2_logical_generator.py  test_xyz2_stabilizer_generator.py
(+995 files in other folders)
